--- a/detail.html
+++ b/detail.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="logo flex-center">
+    <nav class="nav display-flex">
+        <div class="logo display-flex flex-center">
             <a href="./index.html">
                 <i class="fa fa-paw logo-icon"></i>
             </a>
@@ -23,9 +23,9 @@
             </a>           
         </div>
 
-        <div class="menu flex-large flex-fit">
-            <ul class="menu-links flex-center flex-fit">
-                <li class="flex-center">
+        <div class="menu display-flex flex-fit">
+            <ul class="menu-links display-flex flex-center flex-fit">
+                <li class="display-flex flex-center">
                     <a href="./results.html">
                         <i class="fa fa-search menu-icon"></i>
                     </a>
@@ -33,7 +33,7 @@
                         <span>destinations</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-user menu-icon"></i>
                     </a>
@@ -41,7 +41,7 @@
                         <span>about</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-rss menu-icon"></i>
                     </a>
@@ -49,7 +49,7 @@
                         <span>blog</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-bars menu-icon"></i>
                     </a>
@@ -99,7 +99,7 @@
                     </table>
                 </div>
 
-                <div class="contacts">
+                <div class="contacts display-flex">
                     <span><i class="fas fa-tty"></i>&nbsp;+254-825-25-5585</span>
                     <span><i class="fas fa-envelope"></i>&nbsp;info@mara.co.ke</span>
                 </div>
@@ -162,18 +162,18 @@
 
     <footer>
         <div class="footer-top">
-            <ul class="footer-links flex-center">
+            <ul class="footer-links display-flex flex-center">
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-left flex-center">
+                    <ul class="f-links-left display-flex flex-center">
                         <li><a href="#">home</a></li>
                         <li><a href="#">search</a></li>
                         <li><a href="#">about us</a></li>
                         <li><a href="#">advertise</a></li>
                     </ul>
                 </li>
-                <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
+                <li class="f-logo display-flex flex-center"><i class="fa fa-paw logo-icon"></i></li>
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-right flex-center">
+                    <ul class="f-links-right display-flex flex-center">
                         <li><a href="#">facebook</a></li>
                         <li><a href="#">twitter</a></li>
                         <li><a href="#">blog</a></li>
@@ -182,22 +182,22 @@
                 </li>
             </ul>
         </div>
-        <div class="footer-middle">
-            <div class="subscribe">
+        <div class="footer-middle display-flex">
+            <div class="subscribe display-flex">
                 <h3>subscribe</h3>
-                <form action="#">
+                <form action="#" class="display-flex">
                     <input type="email" id="email" name="email" placeholder="you@example.com" />
                     <button type="submit">send</button>
                 </form>
             </div>
 
-            <div class="contact">
+            <div class="contact display-flex">
                 <h3>contact</h3>
                 <p>To get all your queries answered:</p>
                 <span>info@jivinjari.com</span>
             </div>
 
-            <div class="about">
+            <div class="about display-flex">
                 <h3>about</h3>
                 <p>
                     Jivinjari is an online directory for major and best of the best
@@ -208,8 +208,8 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <div class="footer-social">
+        <div class="footer-bottom display-flex flex-center">
+            <div class="footer-social display-flex flex-center">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
