--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="logo flex-center">
+    <nav class="nav display-flex">
+        <div class="logo display-flex flex-center">
             <a href="./index.html">
                 <i class="fa fa-paw logo-icon"></i>
             </a>
@@ -23,9 +23,9 @@
             </a>           
         </div>
 
-        <div class="menu flex-large flex-fit">
-            <ul class="menu-links flex-center flex-fit">
-                <li class="flex-center">
+        <div class="menu display-flex flex-fit">
+            <ul class="menu-links display-flex flex-center flex-fit">
+                <li class="display-flex flex-center">
                     <a href="./results.html">
                         <i class="fa fa-search menu-icon"></i>
                     </a>
@@ -33,7 +33,7 @@
                         <span>destinations</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-user menu-icon"></i>
                     </a>
@@ -41,7 +41,7 @@
                         <span>about</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-rss menu-icon"></i>
                     </a>
@@ -49,7 +49,7 @@
                         <span>blog</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-bars menu-icon"></i>
                     </a>
@@ -61,8 +61,8 @@
         </div>
     </nav>
     <main>
-        <section class="search-bar flex-mobile">
-            <div class="container flex-mobile">
+        <section class="search-bar display-flex">
+            <div class="container display-flex">
                 <header>
                     <h1 class="uppercase text-center">
                         jivinjari: a one stop directory for tourism destinations in kenya.
@@ -87,7 +87,7 @@
                 <h3 id="instructions">to "jivinjari", follow these simple steps</h3>
             </header>
             <div class="steps">
-                <article class="step">
+                <article class="step display-flex">
                     <div class="step-icon">
                         <i class="fas fa-search-location"></i>
                     </div>
@@ -102,7 +102,7 @@
                     </p>
                 </article>
 
-                <article class="step">
+                <article class="step display-flex">
                     <div class="step-icon">
                         <i class="fas fa-map-marked"></i>
                     </div>
@@ -115,7 +115,7 @@
                     </p>
                 </article>
 
-                <article class="step">
+                <article class="step display-flex">
                     <div class="step-icon">
                         <i class="fas fa-address-card"></i>
                     </div>
@@ -129,7 +129,7 @@
                     </p>
                 </article>
 
-                <article class="step">
+                <article class="step display-flex">
                     <div class="step-icon">
                         <i class="fas fa-plane-departure"></i>
                     </div>
@@ -142,8 +142,8 @@
             </div>
         </section>
 
-        <article class="info">
-            <div class="info-detail">
+        <article class="info display-flex flex-center">
+            <div class="info-detail display-flex flex-center">
                 <h5>
                     Over 1000 tourism destinations and travel agencies registered with
                     us
@@ -158,8 +158,8 @@
             <img src="./assets/images/cheetah.jpg" alt="" class="info-img" />
         </article>
 
-        <article class="info">
-            <div class="info-detail">
+        <article class="info display-flex flex-center">
+            <div class="info-detail display-flex flex-center">
                 <h5>Avoid too much hustle</h5>
                 <p>
                     Jivinjari will get you booked with reputable travel agencies. We
@@ -172,8 +172,8 @@
             <img src="./assets/images/hotel.jpg" alt="" class="info-img" />
         </article>
 
-        <article class="info">
-            <div class="info-detail">
+        <article class="info display-flex flex-center">
+            <div class="info-detail display-flex">
                 <h5>Save money</h5>
                 <p>
                     It makes much more sense booking with us. Take advantage of
@@ -187,18 +187,18 @@
     </main>
     <footer>
         <div class="footer-top">
-            <ul class="footer-links flex-center">
+            <ul class="footer-links display-flex flex-center">
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-left flex-center">
+                    <ul class="f-links-left display-flex flex-center">
                         <li><a href="#">home</a></li>
                         <li><a href="#">search</a></li>
                         <li><a href="#">about us</a></li>
                         <li><a href="#">advertise</a></li>
                     </ul>
                 </li>
-                <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
+                <li class="f-logo display-flex flex-center"><i class="fa fa-paw logo-icon"></i></li>
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-right flex-center">
+                    <ul class="f-links-right display-flex flex-center">
                         <li><a href="#">facebook</a></li>
                         <li><a href="#">twitter</a></li>
                         <li><a href="#">blog</a></li>
@@ -207,22 +207,22 @@
                 </li>
             </ul>
         </div>
-        <div class="footer-middle">
-            <div class="subscribe">
+        <div class="footer-middle display-flex">
+            <div class="subscribe display-flex">
                 <h3>subscribe</h3>
-                <form action="#">
+                <form action="#" class="display-flex">
                     <input type="email" id="email" name="email" placeholder="you@example.com" />
                     <button type="submit">send</button>
                 </form>
             </div>
 
-            <div class="contact">
+            <div class="contact display-flex">
                 <h3>contact</h3>
                 <p>To get all your queries answered:</p>
                 <span>info@jivinjari.com</span>
             </div>
 
-            <div class="about">
+            <div class="about display-flex">
                 <h3>about</h3>
                 <p>
                     Jivinjari is an online directory for major and best of the best
@@ -233,8 +233,8 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <div class="footer-social">
+        <div class="footer-bottom display-flex flex-center">
+            <div class="footer-social display-flex flex-center">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
