--- a/results.html
+++ b/results.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="logo flex-center">
+    <nav class="nav display-flex">
+        <div class="logo display-flex flex-center">
             <a href="./index.html">
                 <i class="fa fa-paw logo-icon"></i>
             </a>
@@ -23,9 +23,9 @@
             </a>
         </div>
 
-        <div class="menu flex-large flex-fit">
-            <ul class="menu-links flex-center flex-fit">
-                <li class="flex-center">
+        <div class="menu display-flex flex-fit">
+            <ul class="menu-links display-flex flex-center flex-fit">
+                <li class="display-flex flex-center">
                     <a href="./results.html">
                         <i class="fa fa-search menu-icon"></i>
                     </a>
@@ -33,7 +33,7 @@
                         <span>destinations</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-user menu-icon"></i>
                     </a>
@@ -41,7 +41,7 @@
                         <span>about</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-rss menu-icon"></i>
                     </a>
@@ -49,7 +49,7 @@
                         <span>blog</span>
                     </a>
                 </li>
-                <li class="flex-center">
+                <li class="display-flex flex-center">
                     <a href="#">
                         <i class="fa fa-bars menu-icon"></i>
                     </a>
@@ -61,16 +61,16 @@
         </div>
     </nav>
     <main>
-        <section class="filter flex-mobile">
+        <section class="filter display-flex">
             <h1>
                 Filter by Name of Town, Destination Category or Attraction Type:
             </h1>
-            <form action="#" class="flex-mobile">
-                <fieldset class="flex-mobile">
+            <form action="#" class="display-flex">
+                <fieldset class="display-flex">
                     <label for="town">Name of Town:</label>
                     <input type="text" name="town" id="town" placeholder="Enter name of town/city">
                 </fieldset>
-                <fieldset class="flex-mobile">
+                <fieldset class="display-flex">
                     <label for="destination-category">Category:</label>
                     <select id="destination-category" name="destination-category">
                         <option value="adventure-tourism">Adventure Tourism</option>
@@ -84,7 +84,7 @@
                         <option value="cruse-tourism">Cruse Tourism</option>
                     </select>
                 </fieldset>
-                <fieldset class="flex-mobile">
+                <fieldset class="display-flex">
                     <label for="attraction-type">Type:</label>
                     <select id="attraction-type" name="attraction-type">
                         <option value="beaches">Beaches</option>
@@ -97,14 +97,14 @@
                         <option value="events">Entertainment and Events</option>
                     </select>
                 </fieldset>
-                <div class="buttons flex-mobile">
+                <div class="buttons display-flex">
                     <button type="submit">Search</button>
                     <button type="reset"><i class="fas fa-edit"></i>&nbsp;&nbsp;clear filter</button>
                 </div>
             </form>
         </section>
 
-        <section class="results">
+        <section class="results display-flex">
             <h2 class="d-none">Tourism Destinations in Kenya</h2>
 
             <article class="card">
@@ -224,18 +224,18 @@
     </main>
     <footer>
         <div class="footer-top">
-            <ul class="footer-links flex-center">
+            <ul class="footer-links display-flex flex-center">
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-left flex-center">
+                    <ul class="f-links-left display-flex flex-center">
                         <li><a href="#">home</a></li>
                         <li><a href="#">search</a></li>
                         <li><a href="#">about us</a></li>
                         <li><a href="#">advertise</a></li>
                     </ul>
                 </li>
-                <li class="f-logo"><i class="fa fa-paw logo-icon"></i></li>
+                <li class="f-logo display-flex flex-center"><i class="fa fa-paw logo-icon"></i></li>
                 <li class="f-links-container full-width flex-fit">
-                    <ul class="f-links-right flex-center">
+                    <ul class="f-links-right display-flex flex-center">
                         <li><a href="#">facebook</a></li>
                         <li><a href="#">twitter</a></li>
                         <li><a href="#">blog</a></li>
@@ -244,22 +244,22 @@
                 </li>
             </ul>
         </div>
-        <div class="footer-middle">
-            <div class="subscribe">
+        <div class="footer-middle display-flex">
+            <div class="subscribe display-flex">
                 <h3>subscribe</h3>
-                <form action="#">
+                <form action="#" class="display-flex">
                     <input type="email" id="email" name="email" placeholder="you@example.com" />
                     <button type="submit">send</button>
                 </form>
             </div>
 
-            <div class="contact">
+            <div class="contact display-flex">
                 <h3>contact</h3>
                 <p>To get all your queries answered:</p>
                 <span>info@jivinjari.com</span>
             </div>
 
-            <div class="about">
+            <div class="about display-flex">
                 <h3>about</h3>
                 <p>
                     Jivinjari is an online directory for major and best of the best
@@ -270,8 +270,8 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <div class="footer-social">
+        <div class="footer-bottom display-flex flex-center">
+            <div class="footer-social display-flex flex-center">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
